--- a/blocks/highlight/_theme/highlight_theme_dark.css
+++ b/blocks/highlight/_theme/highlight_theme_dark.css
@@ -4,101 +4,101 @@ Dark style from softwaremaniacs.org (c) Ivan Sagalaev <Maniac@SoftwareManiacs.Or
 
 */
 
-pre code {
+.highlight_theme_dark pre code {
   display: block; padding: 0.5em;
   background: #444;
 }
 
-pre .keyword,
-pre .literal,
-pre .change,
-pre .winutils,
-pre .flow,
-pre .lisp .title,
-pre .clojure .built_in,
-pre .nginx .title,
-pre .tex .special {
+.highlight_theme_dark pre .keyword,
+.highlight_theme_dark pre .literal,
+.highlight_theme_dark pre .change,
+.highlight_theme_dark pre .winutils,
+.highlight_theme_dark pre .flow,
+.highlight_theme_dark pre .lisp .title,
+.highlight_theme_dark pre .clojure .built_in,
+.highlight_theme_dark pre .nginx .title,
+.highlight_theme_dark pre .tex .special {
   color: white;
 }
 
-pre code,
-pre .subst {
+.highlight_theme_dark pre code,
+.highlight_theme_dark pre .subst {
   color: #DDD;
 }
 
-pre .string,
-pre .title,
-pre .haskell .type,
-pre .ini .title,
-pre .tag .value,
-pre .css .rules .value,
-pre .preprocessor,
-pre .ruby .symbol,
-pre .ruby .symbol .string,
-pre .ruby .class .parent,
-pre .built_in,
-pre .sql .aggregate,
-pre .django .template_tag,
-pre .django .variable,
-pre .smalltalk .class,
-pre .javadoc,
-pre .ruby .string,
-pre .django .filter .argument,
-pre .smalltalk .localvars,
-pre .smalltalk .array,
-pre .attr_selector,
-pre .pseudo,
-pre .addition,
-pre .stream,
-pre .envvar,
-pre .apache .tag,
-pre .apache .cbracket,
-pre .tex .command,
-pre .prompt,
-pre .coffeescript .attribute {
+.highlight_theme_dark pre .string,
+.highlight_theme_dark pre .title,
+.highlight_theme_dark pre .haskell .type,
+.highlight_theme_dark pre .ini .title,
+.highlight_theme_dark pre .tag .value,
+.highlight_theme_dark pre .css .rules .value,
+.highlight_theme_dark pre ..highlight_theme_dark preprocessor,
+.highlight_theme_dark pre .ruby .symbol,
+.highlight_theme_dark pre .ruby .symbol .string,
+.highlight_theme_dark pre .ruby .class .parent,
+.highlight_theme_dark pre .built_in,
+.highlight_theme_dark pre .sql .aggregate,
+.highlight_theme_dark pre .django .template_tag,
+.highlight_theme_dark pre .django .variable,
+.highlight_theme_dark pre .smalltalk .class,
+.highlight_theme_dark pre .javadoc,
+.highlight_theme_dark pre .ruby .string,
+.highlight_theme_dark pre .django .filter .argument,
+.highlight_theme_dark pre .smalltalk .localvars,
+.highlight_theme_dark pre .smalltalk .array,
+.highlight_theme_dark pre .attr_selector,
+.highlight_theme_dark pre .pseudo,
+.highlight_theme_dark pre .addition,
+.highlight_theme_dark pre .stream,
+.highlight_theme_dark pre .envvar,
+.highlight_theme_dark pre .apache .tag,
+.highlight_theme_dark pre .apache .cbracket,
+.highlight_theme_dark pre .tex .command,
+.highlight_theme_dark pre .prompt,
+.highlight_theme_dark pre .coffeescript .attribute {
   color: #D88;
 }
 
-pre .comment,
-pre .java .annotation,
-pre .python .decorator,
-pre .template_comment,
-pre .pi,
-pre .doctype,
-pre .deletion,
-pre .shebang,
-pre .apache .sqbracket,
-pre .tex .formula {
+.highlight_theme_dark pre .comment,
+.highlight_theme_dark pre .java .annotation,
+.highlight_theme_dark pre .python .decorator,
+.highlight_theme_dark pre .template_comment,
+.highlight_theme_dark pre .pi,
+.highlight_theme_dark pre .doctype,
+.highlight_theme_dark pre .deletion,
+.highlight_theme_dark pre .shebang,
+.highlight_theme_dark pre .apache .sqbracket,
+.highlight_theme_dark pre .tex .formula {
   color: #777;
 }
 
-pre .keyword,
-pre .literal,
-pre .title,
-pre .css .id,
-pre .phpdoc,
-pre .haskell .type,
-pre .vbscript .built_in,
-pre .sql .aggregate,
-pre .rsl .built_in,
-pre .smalltalk .class,
-pre .diff .header,
-pre .chunk,
-pre .winutils,
-pre .bash .variable,
-pre .apache .tag,
-pre .tex .special,
-pre .request,
-pre .status {
+.highlight_theme_dark pre .keyword,
+.highlight_theme_dark pre .literal,
+.highlight_theme_dark pre .title,
+.highlight_theme_dark pre .css .id,
+.highlight_theme_dark pre .phpdoc,
+.highlight_theme_dark pre .haskell .type,
+.highlight_theme_dark pre .vbscript .built_in,
+.highlight_theme_dark pre .sql .aggregate,
+.highlight_theme_dark pre .rsl .built_in,
+.highlight_theme_dark pre .smalltalk .class,
+.highlight_theme_dark pre .diff .header,
+.highlight_theme_dark pre .chunk,
+.highlight_theme_dark pre .winutils,
+.highlight_theme_dark pre .bash .variable,
+.highlight_theme_dark pre .apache .tag,
+.highlight_theme_dark pre .tex .special,
+.highlight_theme_dark pre .request,
+.highlight_theme_dark pre .status {
   font-weight: bold;
 }
 
-pre .coffeescript .javascript,
-pre .javascript .xml,
-pre .tex .formula,
-pre .xml .javascript,
-pre .xml .vbscript,
-pre .xml .css,
-pre .xml .cdata {
+.highlight_theme_dark pre .coffeescript .javascript,
+.highlight_theme_dark pre .javascript .xml,
+.highlight_theme_dark pre .tex .formula,
+.highlight_theme_dark pre .xml .javascript,
+.highlight_theme_dark pre .xml .vbscript,
+.highlight_theme_dark pre .xml .css,
+.highlight_theme_dark pre .xml .cdata {
   opacity: 0.5;
 }
