--- a/blocks/highlight/_theme/highlight_theme_foundation.css
+++ b/blocks/highlight/_theme/highlight_theme_foundation.css
@@ -6,108 +6,108 @@ Version: 1.0
 Date: 2013-04-02
 */
 
-pre code {
+.highlight_theme_foundation pre code {
   display: block; padding: 0.5em;
   background: #eee;
 }
 
-pre .decorator,
-pre .annotation {
+.highlight_theme_foundation pre .decorator,
+.highlight_theme_foundation pre .annotation {
   color: #000077;
 }
 
-pre .attribute {
+.highlight_theme_foundation pre .attribute {
   color: #070;
 }
 
-pre .value,
-pre .string,
-pre .scss .value .string {
+.highlight_theme_foundation pre .value,
+.highlight_theme_foundation pre .string,
+.highlight_theme_foundation pre .scss .value .string {
   color: #d14;
 }
 
-pre .comment {
+.highlight_theme_foundation pre .comment {
   color: #998;
   font-style: italic;
 }
 
-pre .function .title {
+.highlight_theme_foundation pre .function .title {
   color: #900;
 }
 
-pre .class {
+.highlight_theme_foundation pre .class {
   color: #458;
 }
 
-pre .id,
-pre .pseudo,
-pre .constant,
-pre .hexcolor {
+.highlight_theme_foundation pre .id,
+.highlight_theme_foundation pre .pseudo,
+.highlight_theme_foundation pre .constant,
+.highlight_theme_foundation pre .hexcolor {
   color: teal;
 }
 
-pre .variable {
+.highlight_theme_foundation pre .variable {
   color: #336699;
 }
 
-pre .javadoc {
+.highlight_theme_foundation pre .javadoc {
   color: #997700;
 }
 
-pre .pi,
-pre .doctype {
+.highlight_theme_foundation pre .pi,
+.highlight_theme_foundation pre .doctype {
   color: #3344bb;
 }
 
-pre .number {
+.highlight_theme_foundation pre .number {
   color: #099;
 }
 
-pre .important {
+.highlight_theme_foundation pre .important {
   color: #f00;
 }
 
-pre .label {
+.highlight_theme_foundation pre .label {
   color: #970;
 }
 
-pre .preprocessor {
+.highlight_theme_foundation pre ..highlight_theme_foundation preprocessor {
   color: #579;
 }
 
-pre .reserved,
-pre .keyword,
-pre .scss .value {
+.highlight_theme_foundation pre .reserved,
+.highlight_theme_foundation pre .keyword,
+.highlight_theme_foundation pre .scss .value {
   color: #000;
 }
 
-pre .regexp {
+.highlight_theme_foundation pre .regexp {
   background-color: #fff0ff;
   color: #880088;
 }
 
-pre .symbol {
+.highlight_theme_foundation pre .symbol {
   color: #990073;
 }
 
-pre .symbol .string {
+.highlight_theme_foundation pre .symbol .string {
   color: #a60;
 }
 
-pre .tag {
+.highlight_theme_foundation pre .tag {
   color: #007700;
 }
 
-pre .at_rule,
-pre .at_rule .keyword {
+.highlight_theme_foundation pre .at_rule,
+.highlight_theme_foundation pre .at_rule .keyword {
   color: #088;
 }
 
-pre .at_rule .preprocessor {
+.highlight_theme_foundation pre .at_rule ..highlight_theme_foundation preprocessor {
   color: #808;
 }
 
-pre .scss .tag,
-pre .scss .attribute {
+.highlight_theme_foundation pre .scss .tag,
+.highlight_theme_foundation pre .scss .attribute {
   color: #339;
 }
