--- a/blocks/highlight/_theme/highlight_theme_github.css
+++ b/blocks/highlight/_theme/highlight_theme_github.css
@@ -4,126 +4,126 @@ github.com style (c) Vasily Polovnyov <vast@whiteants.net>
 
 */
 
-pre code {
+.highlight_theme_github pre code {
   display: block; padding: 0.5em;
   color: #333;
   background: #f8f8ff
 }
 
-pre .comment,
-pre .template_comment,
-pre .diff .header,
-pre .javadoc {
+.highlight_theme_github pre .comment,
+.highlight_theme_github pre .template_comment,
+.highlight_theme_github pre .diff .header,
+.highlight_theme_github pre .javadoc {
   color: #998;
   font-style: italic
 }
 
-pre .keyword,
-pre .css .rule .keyword,
-pre .winutils,
-pre .javascript .title,
-pre .nginx .title,
-pre .subst,
-pre .request,
-pre .status {
+.highlight_theme_github pre .keyword,
+.highlight_theme_github pre .css .rule .keyword,
+.highlight_theme_github pre .winutils,
+.highlight_theme_github pre .javascript .title,
+.highlight_theme_github pre .nginx .title,
+.highlight_theme_github pre .subst,
+.highlight_theme_github pre .request,
+.highlight_theme_github pre .status {
   color: #333;
   font-weight: bold
 }
 
-pre .number,
-pre .hexcolor,
-pre .ruby .constant {
+.highlight_theme_github pre .number,
+.highlight_theme_github pre .hexcolor,
+.highlight_theme_github pre .ruby .constant {
   color: #099;
 }
 
-pre .string,
-pre .tag .value,
-pre .phpdoc,
-pre .tex .formula {
+.highlight_theme_github pre .string,
+.highlight_theme_github pre .tag .value,
+.highlight_theme_github pre .phpdoc,
+.highlight_theme_github pre .tex .formula {
   color: #d14
 }
 
-pre .title,
-pre .id,
-pre .coffeescript .params,
-pre .scss .preprocessor {
+.highlight_theme_github pre .title,
+.highlight_theme_github pre .id,
+.highlight_theme_github pre .coffeescript .params,
+.highlight_theme_github pre .scss ..highlight_theme_github preprocessor {
   color: #900;
   font-weight: bold
 }
 
-pre .javascript .title,
-pre .lisp .title,
-pre .clojure .title,
-pre .subst {
+.highlight_theme_github pre .javascript .title,
+.highlight_theme_github pre .lisp .title,
+.highlight_theme_github pre .clojure .title,
+.highlight_theme_github pre .subst {
   font-weight: normal
 }
 
-pre .class .title,
-pre .haskell .type,
-pre .vhdl .literal,
-pre .tex .command {
+.highlight_theme_github pre .class .title,
+.highlight_theme_github pre .haskell .type,
+.highlight_theme_github pre .vhdl .literal,
+.highlight_theme_github pre .tex .command {
   color: #458;
   font-weight: bold
 }
 
-pre .tag,
-pre .tag .title,
-pre .rules .property,
-pre .django .tag .keyword {
+.highlight_theme_github pre .tag,
+.highlight_theme_github pre .tag .title,
+.highlight_theme_github pre .rules .property,
+.highlight_theme_github pre .django .tag .keyword {
   color: #000080;
   font-weight: normal
 }
 
-pre .attribute,
-pre .variable,
-pre .lisp .body {
+.highlight_theme_github pre .attribute,
+.highlight_theme_github pre .variable,
+.highlight_theme_github pre .lisp .body {
   color: #008080
 }
 
-pre .regexp {
+.highlight_theme_github pre .regexp {
   color: #009926
 }
 
-pre .class {
+.highlight_theme_github pre .class {
   color: #458;
   font-weight: bold
 }
 
-pre .symbol,
-pre .ruby .symbol .string,
-pre .lisp .keyword,
-pre .tex .special,
-pre .prompt {
+.highlight_theme_github pre .symbol,
+.highlight_theme_github pre .ruby .symbol .string,
+.highlight_theme_github pre .lisp .keyword,
+.highlight_theme_github pre .tex .special,
+.highlight_theme_github pre .prompt {
   color: #990073
 }
 
-pre .built_in,
-pre .lisp .title,
-pre .clojure .built_in {
+.highlight_theme_github pre .built_in,
+.highlight_theme_github pre .lisp .title,
+.highlight_theme_github pre .clojure .built_in {
   color: #0086b3
 }
 
-pre .preprocessor,
-pre .pi,
-pre .doctype,
-pre .shebang,
-pre .cdata {
+.highlight_theme_github pre ..highlight_theme_github preprocessor,
+.highlight_theme_github pre .pi,
+.highlight_theme_github pre .doctype,
+.highlight_theme_github pre .shebang,
+.highlight_theme_github pre .cdata {
   color: #999;
   font-weight: bold
 }
 
-pre .deletion {
+.highlight_theme_github pre .deletion {
   background: #fdd
 }
 
-pre .addition {
+.highlight_theme_github pre .addition {
   background: #dfd
 }
 
-pre .diff .change {
+.highlight_theme_github pre .diff .change {
   background: #0086b3
 }
 
-pre .chunk {
+.highlight_theme_github pre .chunk {
   color: #aaa
 }
