--- a/blocks/highlight/_theme/highlight_theme_ir-black.css
+++ b/blocks/highlight/_theme/highlight_theme_ir-black.css
@@ -2,104 +2,104 @@
   IR_Black style (c) Vasily Mikhailitchenko <vaskas@programica.ru>
 */
 
-pre code {
+.highlight_theme_ir-black pre code {
   display: block; padding: 0.5em;
   background: #000; color: #f8f8f8;
 }
 
-pre .shebang,
-pre .comment,
-pre .template_comment,
-pre .javadoc {
+.highlight_theme_ir-black pre .shebang,
+.highlight_theme_ir-black pre .comment,
+.highlight_theme_ir-black pre .template_comment,
+.highlight_theme_ir-black pre .javadoc {
   color: #7c7c7c;
 }
 
-pre .keyword,
-pre .tag,
-pre .tex .command,
-pre .request,
-pre .status,
-pre .clojure .attribute {
+.highlight_theme_ir-black pre .keyword,
+.highlight_theme_ir-black pre .tag,
+.highlight_theme_ir-black pre .tex .command,
+.highlight_theme_ir-black pre .request,
+.highlight_theme_ir-black pre .status,
+.highlight_theme_ir-black pre .clojure .attribute {
   color: #96CBFE;
 }
 
-pre .sub .keyword,
-pre .method,
-pre .list .title,
-pre .nginx .title {
+.highlight_theme_ir-black pre .sub .keyword,
+.highlight_theme_ir-black pre .method,
+.highlight_theme_ir-black pre .list .title,
+.highlight_theme_ir-black pre .nginx .title {
   color: #FFFFB6;
 }
 
-pre .string,
-pre .tag .value,
-pre .cdata,
-pre .filter .argument,
-pre .attr_selector,
-pre .apache .cbracket,
-pre .date,
-pre .coffeescript .attribute {
+.highlight_theme_ir-black pre .string,
+.highlight_theme_ir-black pre .tag .value,
+.highlight_theme_ir-black pre .cdata,
+.highlight_theme_ir-black pre .filter .argument,
+.highlight_theme_ir-black pre .attr_selector,
+.highlight_theme_ir-black pre .apache .cbracket,
+.highlight_theme_ir-black pre .date,
+.highlight_theme_ir-black pre .coffeescript .attribute {
   color: #A8FF60;
 }
 
-pre .subst {
+.highlight_theme_ir-black pre .subst {
   color: #DAEFA3;
 }
 
-pre .regexp {
+.highlight_theme_ir-black pre .regexp {
   color: #E9C062;
 }
 
-pre .title,
-pre .sub .identifier,
-pre .pi,
-pre .decorator,
-pre .tex .special,
-pre .haskell .type,
-pre .constant,
-pre .smalltalk .class,
-pre .javadoctag,
-pre .yardoctag,
-pre .phpdoc,
-pre .nginx .built_in {
+.highlight_theme_ir-black pre .title,
+.highlight_theme_ir-black pre .sub .identifier,
+.highlight_theme_ir-black pre .pi,
+.highlight_theme_ir-black pre .decorator,
+.highlight_theme_ir-black pre .tex .special,
+.highlight_theme_ir-black pre .haskell .type,
+.highlight_theme_ir-black pre .constant,
+.highlight_theme_ir-black pre .smalltalk .class,
+.highlight_theme_ir-black pre .javadoctag,
+.highlight_theme_ir-black pre .yardoctag,
+.highlight_theme_ir-black pre .phpdoc,
+.highlight_theme_ir-black pre .nginx .built_in {
   color: #FFFFB6;
 }
 
-pre .symbol,
-pre .ruby .symbol .string,
-pre .number,
-pre .variable,
-pre .vbscript,
-pre .literal {
+.highlight_theme_ir-black pre .symbol,
+.highlight_theme_ir-black pre .ruby .symbol .string,
+.highlight_theme_ir-black pre .number,
+.highlight_theme_ir-black pre .variable,
+.highlight_theme_ir-black pre .vbscript,
+.highlight_theme_ir-black pre .literal {
   color: #C6C5FE;
 }
 
-pre .css .tag {
+.highlight_theme_ir-black pre .css .tag {
   color: #96CBFE;
 }
 
-pre .css .rules .property,
-pre .css .id {
+.highlight_theme_ir-black pre .css .rules .property,
+.highlight_theme_ir-black pre .css .id {
   color: #FFFFB6;
 }
 
-pre .css .class {
+.highlight_theme_ir-black pre .css .class {
   color: #FFF;
 }
 
-pre .hexcolor {
+.highlight_theme_ir-black pre .hexcolor {
   color: #C6C5FE;
 }
 
-pre .number {
+.highlight_theme_ir-black pre .number {
   color:#FF73FD;
 }
 
-pre .coffeescript .javascript,
-pre .javascript .xml,
-pre .tex .formula,
-pre .xml .javascript,
-pre .xml .vbscript,
-pre .xml .css,
-pre .xml .cdata {
+.highlight_theme_ir-black pre .coffeescript .javascript,
+.highlight_theme_ir-black pre .javascript .xml,
+.highlight_theme_ir-black pre .tex .formula,
+.highlight_theme_ir-black pre .xml .javascript,
+.highlight_theme_ir-black pre .xml .vbscript,
+.highlight_theme_ir-black pre .xml .css,
+.highlight_theme_ir-black pre .xml .cdata {
   opacity: 0.7;
 }
