--- a/blocks/highlight/_theme/highlight_theme_magula.css
+++ b/blocks/highlight/_theme/highlight_theme_magula.css
@@ -7,115 +7,115 @@ Date: 2009-01-03
 Music: Aphex Twin / Xtal
 */
 
-pre code {
+.highlight_theme_magula pre code {
   display: block; padding: 0.5em;
   background-color: #f4f4f4;
 }
 
-pre code,
-pre .subst,
-pre .lisp .title,
-pre .clojure .built_in {
+.highlight_theme_magula pre code,
+.highlight_theme_magula pre .subst,
+.highlight_theme_magula pre .lisp .title,
+.highlight_theme_magula pre .clojure .built_in {
   color: black;
 }
 
-pre .string,
-pre .title,
-pre .parent,
-pre .tag .value,
-pre .rules .value,
-pre .rules .value .number,
-pre .preprocessor,
-pre .ruby .symbol,
-pre .ruby .symbol .string,
-pre .aggregate,
-pre .template_tag,
-pre .django .variable,
-pre .smalltalk .class,
-pre .addition,
-pre .flow,
-pre .stream,
-pre .bash .variable,
-pre .apache .cbracket,
-pre .coffeescript .attribute {
+.highlight_theme_magula pre .string,
+.highlight_theme_magula pre .title,
+.highlight_theme_magula pre .parent,
+.highlight_theme_magula pre .tag .value,
+.highlight_theme_magula pre .rules .value,
+.highlight_theme_magula pre .rules .value .number,
+.highlight_theme_magula pre ..highlight_theme_magula preprocessor,
+.highlight_theme_magula pre .ruby .symbol,
+.highlight_theme_magula pre .ruby .symbol .string,
+.highlight_theme_magula pre .aggregate,
+.highlight_theme_magula pre .template_tag,
+.highlight_theme_magula pre .django .variable,
+.highlight_theme_magula pre .smalltalk .class,
+.highlight_theme_magula pre .addition,
+.highlight_theme_magula pre .flow,
+.highlight_theme_magula pre .stream,
+.highlight_theme_magula pre .bash .variable,
+.highlight_theme_magula pre .apache .cbracket,
+.highlight_theme_magula pre .coffeescript .attribute {
   color: #050;
 }
 
-pre .comment,
-pre .annotation,
-pre .template_comment,
-pre .diff .header,
-pre .chunk {
+.highlight_theme_magula pre .comment,
+.highlight_theme_magula pre .annotation,
+.highlight_theme_magula pre .template_comment,
+.highlight_theme_magula pre .diff .header,
+.highlight_theme_magula pre .chunk {
   color: #777;
 }
 
-pre .number,
-pre .date,
-pre .regexp,
-pre .literal,
-pre .smalltalk .symbol,
-pre .smalltalk .char,
-pre .change,
-pre .tex .special {
+.highlight_theme_magula pre .number,
+.highlight_theme_magula pre .date,
+.highlight_theme_magula pre .regexp,
+.highlight_theme_magula pre .literal,
+.highlight_theme_magula pre .smalltalk .symbol,
+.highlight_theme_magula pre .smalltalk .char,
+.highlight_theme_magula pre .change,
+.highlight_theme_magula pre .tex .special {
   color: #800;
 }
 
-pre .label,
-pre .javadoc,
-pre .ruby .string,
-pre .decorator,
-pre .filter .argument,
-pre .localvars,
-pre .array,
-pre .attr_selector,
-pre .pseudo,
-pre .pi,
-pre .doctype,
-pre .deletion,
-pre .envvar,
-pre .shebang,
-pre .apache .sqbracket,
-pre .nginx .built_in,
-pre .tex .formula,
-pre .prompt,
-pre .clojure .attribute {
+.highlight_theme_magula pre .label,
+.highlight_theme_magula pre .javadoc,
+.highlight_theme_magula pre .ruby .string,
+.highlight_theme_magula pre .decorator,
+.highlight_theme_magula pre .filter .argument,
+.highlight_theme_magula pre .localvars,
+.highlight_theme_magula pre .array,
+.highlight_theme_magula pre .attr_selector,
+.highlight_theme_magula pre .pseudo,
+.highlight_theme_magula pre .pi,
+.highlight_theme_magula pre .doctype,
+.highlight_theme_magula pre .deletion,
+.highlight_theme_magula pre .envvar,
+.highlight_theme_magula pre .shebang,
+.highlight_theme_magula pre .apache .sqbracket,
+.highlight_theme_magula pre .nginx .built_in,
+.highlight_theme_magula pre .tex .formula,
+.highlight_theme_magula pre .prompt,
+.highlight_theme_magula pre .clojure .attribute {
   color: #00e;
 }
 
-pre .keyword,
-pre .id,
-pre .phpdoc,
-pre .title,
-pre .built_in,
-pre .aggregate,
-pre .smalltalk .class,
-pre .winutils,
-pre .bash .variable,
-pre .apache .tag,
-pre .xml .tag,
-pre .tex .command,
-pre .request,
-pre .status {
+.highlight_theme_magula pre .keyword,
+.highlight_theme_magula pre .id,
+.highlight_theme_magula pre .phpdoc,
+.highlight_theme_magula pre .title,
+.highlight_theme_magula pre .built_in,
+.highlight_theme_magula pre .aggregate,
+.highlight_theme_magula pre .smalltalk .class,
+.highlight_theme_magula pre .winutils,
+.highlight_theme_magula pre .bash .variable,
+.highlight_theme_magula pre .apache .tag,
+.highlight_theme_magula pre .xml .tag,
+.highlight_theme_magula pre .tex .command,
+.highlight_theme_magula pre .request,
+.highlight_theme_magula pre .status {
   font-weight: bold;
   color: navy;
 }
 
-pre .nginx .built_in {
+.highlight_theme_magula pre .nginx .built_in {
   font-weight: normal;
 }
 
-pre .coffeescript .javascript,
-pre .javascript .xml,
-pre .tex .formula,
-pre .xml .javascript,
-pre .xml .vbscript,
-pre .xml .css,
-pre .xml .cdata {
+.highlight_theme_magula pre .coffeescript .javascript,
+.highlight_theme_magula pre .javascript .xml,
+.highlight_theme_magula pre .tex .formula,
+.highlight_theme_magula pre .xml .javascript,
+.highlight_theme_magula pre .xml .vbscript,
+.highlight_theme_magula pre .xml .css,
+.highlight_theme_magula pre .xml .cdata {
   opacity: 0.5;
 }
 
 /* --- */
-pre .apache .tag {
+.highlight_theme_magula pre .apache .tag {
   font-weight: bold;
   color: blue;
 }
