--- a/blocks/highlight/_theme/highlight_theme_mono-blue.css
+++ b/blocks/highlight/_theme/highlight_theme_mono-blue.css
@@ -1,59 +1,59 @@
 /*
   Five-color theme from a single blue hue.
 */
-pre code {
+.highlight_theme_mono-blue pre code {
   display: block; padding: 0.5em;
   background: #EAEEF3; color: #00193A;
 }
 
-pre .keyword,
-pre .title,
-pre .important,
-pre .request,
-pre .header,
-pre .javadoctag {
+.highlight_theme_mono-blue pre .keyword,
+.highlight_theme_mono-blue pre .title,
+.highlight_theme_mono-blue pre .important,
+.highlight_theme_mono-blue pre .request,
+.highlight_theme_mono-blue pre .header,
+.highlight_theme_mono-blue pre .javadoctag {
   font-weight: bold;
 }
 
-pre .comment,
-pre .chunk,
-pre .template_comment {
+.highlight_theme_mono-blue pre .comment,
+.highlight_theme_mono-blue pre .chunk,
+.highlight_theme_mono-blue pre .template_comment {
   color: #738191;
 }
 
-pre .string,
-pre .title,
-pre .parent,
-pre .built_in,
-pre .literal,
-pre .filename,
-pre .value,
-pre .addition,
-pre .tag,
-pre .argument,
-pre .link_label,
-pre .blockquote,
-pre .header {
+.highlight_theme_mono-blue pre .string,
+.highlight_theme_mono-blue pre .title,
+.highlight_theme_mono-blue pre .parent,
+.highlight_theme_mono-blue pre .built_in,
+.highlight_theme_mono-blue pre .literal,
+.highlight_theme_mono-blue pre .filename,
+.highlight_theme_mono-blue pre .value,
+.highlight_theme_mono-blue pre .addition,
+.highlight_theme_mono-blue pre .tag,
+.highlight_theme_mono-blue pre .argument,
+.highlight_theme_mono-blue pre .link_label,
+.highlight_theme_mono-blue pre .blockquote,
+.highlight_theme_mono-blue pre .header {
   color: #0048AB;
 }
 
-pre .decorator,
-pre .prompt,
-pre .yardoctag,
-pre .subst,
-pre .symbol,
-pre .doctype,
-pre .regexp,
-pre .preprocessor,
-pre .pi,
-pre .attribute,
-pre .attr_selector,
-pre .javadoc,
-pre .xmlDocTag,
-pre .deletion,
-pre .shebang,
-pre .string .variable,
-pre .link_url,
-pre .bullet {
+.highlight_theme_mono-blue pre .decorator,
+.highlight_theme_mono-blue pre .prompt,
+.highlight_theme_mono-blue pre .yardoctag,
+.highlight_theme_mono-blue pre .subst,
+.highlight_theme_mono-blue pre .symbol,
+.highlight_theme_mono-blue pre .doctype,
+.highlight_theme_mono-blue pre .regexp,
+.highlight_theme_mono-blue pre ..highlight_theme_mono-blue preprocessor,
+.highlight_theme_mono-blue pre .pi,
+.highlight_theme_mono-blue pre .attribute,
+.highlight_theme_mono-blue pre .attr_selector,
+.highlight_theme_mono-blue pre .javadoc,
+.highlight_theme_mono-blue pre .xmlDocTag,
+.highlight_theme_mono-blue pre .deletion,
+.highlight_theme_mono-blue pre .shebang,
+.highlight_theme_mono-blue pre .string .variable,
+.highlight_theme_mono-blue pre .link_url,
+.highlight_theme_mono-blue pre .bullet {
   color: #4C81C9;
 }
