--- a/blocks/highlight/_theme/highlight_theme_rainbow.css
+++ b/blocks/highlight/_theme/highlight_theme_rainbow.css
@@ -4,111 +4,111 @@ Style with support for rainbow parens
 
 */
 
-pre ::-moz-selection{ background: #FF5E99; color:#fff; text-shadow: none; }
-pre ::selection { background:#FF5E99; color:#fff; text-shadow: none; }
+.highlight_theme_rainbow pre ::-moz-selection{ background: #FF5E99; color:#fff; text-shadow: none; }
+.highlight_theme_rainbow pre ::selection { background:#FF5E99; color:#fff; text-shadow: none; }
 
-pre code {
+.highlight_theme_rainbow pre code {
   display: block; padding: 0.5em;
   background: #474949; color: #D1D9E1;
 }
 
 
-pre .body,
-pre .collection {
+.highlight_theme_rainbow pre .body,
+.highlight_theme_rainbow pre .collection {
    color: #D1D9E1;
 }
 
-pre .comment,
-pre .template_comment,
-pre .diff .header,
-pre .doctype,
-pre .lisp .string,
-pre .javadoc {
+.highlight_theme_rainbow pre .comment,
+.highlight_theme_rainbow pre .template_comment,
+.highlight_theme_rainbow pre .diff .header,
+.highlight_theme_rainbow pre .doctype,
+.highlight_theme_rainbow pre .lisp .string,
+.highlight_theme_rainbow pre .javadoc {
   color: #969896;
   font-style: italic;
 }
 
-pre .keyword,
-pre .clojure .attribute,
-pre .winutils,
-pre .javascript .title,
-pre .addition,
-pre .css .tag {
+.highlight_theme_rainbow pre .keyword,
+.highlight_theme_rainbow pre .clojure .attribute,
+.highlight_theme_rainbow pre .winutils,
+.highlight_theme_rainbow pre .javascript .title,
+.highlight_theme_rainbow pre .addition,
+.highlight_theme_rainbow pre .css .tag {
   color: #cc99cc;
 }
 
-pre .number { color: #f99157; }
+.highlight_theme_rainbow pre .number { color: #f99157; }
 
-pre .command,
-pre .string,
-pre .tag .value,
-pre .phpdoc,
-pre .tex .formula,
-pre .regexp,
-pre .hexcolor {
+.highlight_theme_rainbow pre .command,
+.highlight_theme_rainbow pre .string,
+.highlight_theme_rainbow pre .tag .value,
+.highlight_theme_rainbow pre .phpdoc,
+.highlight_theme_rainbow pre .tex .formula,
+.highlight_theme_rainbow pre .regexp,
+.highlight_theme_rainbow pre .hexcolor {
   color: #8abeb7;
 }
 
-pre .title,
-pre .localvars,
-pre .function .title,
-pre .chunk,
-pre .decorator,
-pre .built_in,
-pre .lisp .title,
-pre .identifier
+.highlight_theme_rainbow pre .title,
+.highlight_theme_rainbow pre .localvars,
+.highlight_theme_rainbow pre .function .title,
+.highlight_theme_rainbow pre .chunk,
+.highlight_theme_rainbow pre .decorator,
+.highlight_theme_rainbow pre .built_in,
+.highlight_theme_rainbow pre .lisp .title,
+.highlight_theme_rainbow pre .identifier
 {
   color: #b5bd68;
 }
 
-pre .class .keyword
+.highlight_theme_rainbow pre .class .keyword
 {
   color: #f2777a;
 }
 
-pre .variable,
-pre .lisp .body,
-pre .smalltalk .number,
-pre .constant,
-pre .class .title,
-pre .parent,
-pre .haskell .label,
-pre .id,
-pre .lisp .title,
-pre .clojure .title .built_in {
+.highlight_theme_rainbow pre .variable,
+.highlight_theme_rainbow pre .lisp .body,
+.highlight_theme_rainbow pre .smalltalk .number,
+.highlight_theme_rainbow pre .constant,
+.highlight_theme_rainbow pre .class .title,
+.highlight_theme_rainbow pre .parent,
+.highlight_theme_rainbow pre .haskell .label,
+.highlight_theme_rainbow pre .id,
+.highlight_theme_rainbow pre .lisp .title,
+.highlight_theme_rainbow pre .clojure .title .built_in {
    color: #ffcc66;
 }
 
-pre .tag .title,
-pre .rules .property,
-pre .django .tag .keyword,
-pre .clojure .title .built_in {
+.highlight_theme_rainbow pre .tag .title,
+.highlight_theme_rainbow pre .rules .property,
+.highlight_theme_rainbow pre .django .tag .keyword,
+.highlight_theme_rainbow pre .clojure .title .built_in {
   font-weight: bold;
 }
 
-pre .attribute,
-pre .clojure .title {
+.highlight_theme_rainbow pre .attribute,
+.highlight_theme_rainbow pre .clojure .title {
   color: #81a2be;
 }
 
-pre .preprocessor,
-pre .pi,
-pre .shebang,
-pre .symbol,
-pre .symbol .string,
-pre .diff .change,
-pre .special,
-pre .attr_selector,
-pre .important,
-pre .subst,
-pre .cdata {
+.highlight_theme_rainbow pre ..highlight_theme_rainbow preprocessor,
+.highlight_theme_rainbow pre .pi,
+.highlight_theme_rainbow pre .shebang,
+.highlight_theme_rainbow pre .symbol,
+.highlight_theme_rainbow pre .symbol .string,
+.highlight_theme_rainbow pre .diff .change,
+.highlight_theme_rainbow pre .special,
+.highlight_theme_rainbow pre .attr_selector,
+.highlight_theme_rainbow pre .important,
+.highlight_theme_rainbow pre .subst,
+.highlight_theme_rainbow pre .cdata {
   color: #f99157;
 }
 
-pre .deletion {
+.highlight_theme_rainbow pre .deletion {
   color: #dc322f;
 }
 
-pre .tex .formula {
+.highlight_theme_rainbow pre .tex .formula {
   background: #eee8d5;
 }
