--- a/blocks/highlight/_theme/highlight_theme_sunburst.css
+++ b/blocks/highlight/_theme/highlight_theme_sunburst.css
@@ -4,156 +4,156 @@ Sunburst-like style (c) Vasily Polovnyov <vast@whiteants.net>
 
 */
 
-pre code {
+.highlight_theme_sunburst pre code {
   display: block; padding: 0.5em;
   background: #000; color: #f8f8f8;
 }
 
-pre .comment,
-pre .template_comment,
-pre .javadoc {
+.highlight_theme_sunburst pre .comment,
+.highlight_theme_sunburst pre .template_comment,
+.highlight_theme_sunburst pre .javadoc {
   color: #aeaeae;
   font-style: italic;
 }
 
-pre .keyword,
-pre .ruby .function .keyword,
-pre .request,
-pre .status,
-pre .nginx .title {
+.highlight_theme_sunburst pre .keyword,
+.highlight_theme_sunburst pre .ruby .function .keyword,
+.highlight_theme_sunburst pre .request,
+.highlight_theme_sunburst pre .status,
+.highlight_theme_sunburst pre .nginx .title {
   color: #E28964;
 }
 
-pre .function .keyword,
-pre .sub .keyword,
-pre .method,
-pre .list .title {
+.highlight_theme_sunburst pre .function .keyword,
+.highlight_theme_sunburst pre .sub .keyword,
+.highlight_theme_sunburst pre .method,
+.highlight_theme_sunburst pre .list .title {
   color: #99CF50;
 }
 
-pre .string,
-pre .tag .value,
-pre .cdata,
-pre .filter .argument,
-pre .attr_selector,
-pre .apache .cbracket,
-pre .date,
-pre .tex .command,
-pre .coffeescript .attribute {
+.highlight_theme_sunburst pre .string,
+.highlight_theme_sunburst pre .tag .value,
+.highlight_theme_sunburst pre .cdata,
+.highlight_theme_sunburst pre .filter .argument,
+.highlight_theme_sunburst pre .attr_selector,
+.highlight_theme_sunburst pre .apache .cbracket,
+.highlight_theme_sunburst pre .date,
+.highlight_theme_sunburst pre .tex .command,
+.highlight_theme_sunburst pre .coffeescript .attribute {
   color: #65B042;
 }
 
-pre .subst {
+.highlight_theme_sunburst pre .subst {
   color: #DAEFA3;
 }
 
-pre .regexp {
+.highlight_theme_sunburst pre .regexp {
   color: #E9C062;
 }
 
-pre .title,
-pre .sub .identifier,
-pre .pi,
-pre .tag,
-pre .tag .keyword,
-pre .decorator,
-pre .shebang,
-pre .prompt {
+.highlight_theme_sunburst pre .title,
+.highlight_theme_sunburst pre .sub .identifier,
+.highlight_theme_sunburst pre .pi,
+.highlight_theme_sunburst pre .tag,
+.highlight_theme_sunburst pre .tag .keyword,
+.highlight_theme_sunburst pre .decorator,
+.highlight_theme_sunburst pre .shebang,
+.highlight_theme_sunburst pre .prompt {
   color: #89BDFF;
 }
 
-pre .class .title,
-pre .haskell .type,
-pre .smalltalk .class,
-pre .javadoctag,
-pre .yardoctag,
-pre .phpdoc {
+.highlight_theme_sunburst pre .class .title,
+.highlight_theme_sunburst pre .haskell .type,
+.highlight_theme_sunburst pre .smalltalk .class,
+.highlight_theme_sunburst pre .javadoctag,
+.highlight_theme_sunburst pre .yardoctag,
+.highlight_theme_sunburst pre .phpdoc {
   text-decoration: underline;
 }
 
-pre .symbol,
-pre .ruby .symbol .string,
-pre .number {
+.highlight_theme_sunburst pre .symbol,
+.highlight_theme_sunburst pre .ruby .symbol .string,
+.highlight_theme_sunburst pre .number {
   color: #3387CC;
 }
 
-pre .params,
-pre .variable,
-pre .clojure .attribute {
+.highlight_theme_sunburst pre .params,
+.highlight_theme_sunburst pre .variable,
+.highlight_theme_sunburst pre .clojure .attribute {
   color: #3E87E3;
 }
 
-pre .css .tag,
-pre .rules .property,
-pre .pseudo,
-pre .tex .special {
+.highlight_theme_sunburst pre .css .tag,
+.highlight_theme_sunburst pre .rules .property,
+.highlight_theme_sunburst pre .pseudo,
+.highlight_theme_sunburst pre .tex .special {
   color: #CDA869;
 }
 
-pre .css .class {
+.highlight_theme_sunburst pre .css .class {
   color: #9B703F;
 }
 
-pre .rules .keyword {
+.highlight_theme_sunburst pre .rules .keyword {
   color: #C5AF75;
 }
 
-pre .rules .value {
+.highlight_theme_sunburst pre .rules .value {
   color: #CF6A4C;
 }
 
-pre .css .id {
+.highlight_theme_sunburst pre .css .id {
   color: #8B98AB;
 }
 
-pre .annotation,
-pre .apache .sqbracket,
-pre .nginx .built_in {
+.highlight_theme_sunburst pre .annotation,
+.highlight_theme_sunburst pre .apache .sqbracket,
+.highlight_theme_sunburst pre .nginx .built_in {
   color: #9B859D;
 }
 
-pre .preprocessor {
+.highlight_theme_sunburst pre ..highlight_theme_sunburst preprocessor {
   color: #8996A8;
 }
 
-pre .hexcolor,
-pre .css .value .number {
+.highlight_theme_sunburst pre .hexcolor,
+.highlight_theme_sunburst pre .css .value .number {
   color: #DD7B3B;
 }
 
-pre .css .function {
+.highlight_theme_sunburst pre .css .function {
   color: #DAD085;
 }
 
-pre .diff .header,
-pre .chunk,
-pre .tex .formula {
+.highlight_theme_sunburst pre .diff .header,
+.highlight_theme_sunburst pre .chunk,
+.highlight_theme_sunburst pre .tex .formula {
   background-color: #0E2231;
   color: #F8F8F8;
   font-style: italic;
 }
 
-pre .diff .change {
+.highlight_theme_sunburst pre .diff .change {
   background-color: #4A410D;
   color: #F8F8F8;
 }
 
-pre .addition {
+.highlight_theme_sunburst pre .addition {
   background-color: #253B22;
   color: #F8F8F8;
 }
 
-pre .deletion {
+.highlight_theme_sunburst pre .deletion {
   background-color: #420E09;
   color: #F8F8F8;
 }
 
-pre .coffeescript .javascript,
-pre .javascript .xml,
-pre .tex .formula,
-pre .xml .javascript,
-pre .xml .vbscript,
-pre .xml .css,
-pre .xml .cdata {
+.highlight_theme_sunburst pre .coffeescript .javascript,
+.highlight_theme_sunburst pre .javascript .xml,
+.highlight_theme_sunburst pre .tex .formula,
+.highlight_theme_sunburst pre .xml .javascript,
+.highlight_theme_sunburst pre .xml .vbscript,
+.highlight_theme_sunburst pre .xml .css,
+.highlight_theme_sunburst pre .xml .cdata {
   opacity: 0.5;
 }
