--- a/blocks/highlight/_theme/highlight_theme_tomorrow-night-eighties.css
+++ b/blocks/highlight/_theme/highlight_theme_tomorrow-night-eighties.css
@@ -1,51 +1,51 @@
 /* Tomorrow Night Eighties Theme */
 /* Original theme - https://github.com/chriskempson/tomorrow-theme */
 /* http://jmblog.github.com/color-themes-for-google-code-highlightjs */
-.tomorrow-comment, pre .comment, pre .title {
+.tomorrow-comment, .highlight_theme_tomorrow-night-eighties pre .comment, .highlight_theme_tomorrow-night-eighties pre .title {
   color: #999999;
 }
 
-.tomorrow-red, pre .variable, pre .attribute, pre .tag, pre .regexp, pre .ruby .constant, pre .xml .tag .title, pre .xml .pi, pre .xml .doctype, pre .html .doctype, pre .css .id, pre .css .class, pre .css .pseudo {
+.tomorrow-red, .highlight_theme_tomorrow-night-eighties pre .variable, .highlight_theme_tomorrow-night-eighties pre .attribute, .highlight_theme_tomorrow-night-eighties pre .tag, .highlight_theme_tomorrow-night-eighties pre .regexp, .highlight_theme_tomorrow-night-eighties pre .ruby .constant, .highlight_theme_tomorrow-night-eighties pre .xml .tag .title, .highlight_theme_tomorrow-night-eighties pre .xml .pi, .highlight_theme_tomorrow-night-eighties pre .xml .doctype, .highlight_theme_tomorrow-night-eighties pre .html .doctype, .highlight_theme_tomorrow-night-eighties pre .css .id, .highlight_theme_tomorrow-night-eighties pre .css .class, .highlight_theme_tomorrow-night-eighties pre .css .pseudo {
   color: #f2777a;
 }
 
-.tomorrow-orange, pre .number, pre .preprocessor, pre .built_in, pre .literal, pre .params, pre .constant {
+.tomorrow-orange, .highlight_theme_tomorrow-night-eighties pre .number, .highlight_theme_tomorrow-night-eighties pre ..highlight_theme_tomorrow-night-eighties preprocessor, .highlight_theme_tomorrow-night-eighties pre .built_in, .highlight_theme_tomorrow-night-eighties pre .literal, .highlight_theme_tomorrow-night-eighties pre .params, .highlight_theme_tomorrow-night-eighties pre .constant {
   color: #f99157;
 }
 
-.tomorrow-yellow, pre .ruby .class .title, pre .css .rules .attribute {
+.tomorrow-yellow, .highlight_theme_tomorrow-night-eighties pre .ruby .class .title, .highlight_theme_tomorrow-night-eighties pre .css .rules .attribute {
   color: #ffcc66;
 }
 
-.tomorrow-green, pre .string, pre .value, pre .inheritance, pre .header, pre .ruby .symbol, pre .xml .cdata {
+.tomorrow-green, .highlight_theme_tomorrow-night-eighties pre .string, .highlight_theme_tomorrow-night-eighties pre .value, .highlight_theme_tomorrow-night-eighties pre .inheritance, .highlight_theme_tomorrow-night-eighties pre .header, .highlight_theme_tomorrow-night-eighties pre .ruby .symbol, .highlight_theme_tomorrow-night-eighties pre .xml .cdata {
   color: #99cc99;
 }
 
-.tomorrow-aqua, pre .css .hexcolor {
+.tomorrow-aqua, .highlight_theme_tomorrow-night-eighties pre .css .hexcolor {
   color: #66cccc;
 }
 
-.tomorrow-blue, pre .function, pre .python .decorator, pre .python .title, pre .ruby .function .title, pre .ruby .title .keyword, pre .perl .sub, pre .javascript .title, pre .coffeescript .title {
+.tomorrow-blue, .highlight_theme_tomorrow-night-eighties pre .function, .highlight_theme_tomorrow-night-eighties pre .python .decorator, .highlight_theme_tomorrow-night-eighties pre .python .title, .highlight_theme_tomorrow-night-eighties pre .ruby .function .title, .highlight_theme_tomorrow-night-eighties pre .ruby .title .keyword, .highlight_theme_tomorrow-night-eighties pre .perl .sub, .highlight_theme_tomorrow-night-eighties pre .javascript .title, .highlight_theme_tomorrow-night-eighties pre .coffeescript .title {
   color: #6699cc;
 }
 
-.tomorrow-purple, pre .keyword, pre .javascript .function {
+.tomorrow-purple, .highlight_theme_tomorrow-night-eighties pre .keyword, .highlight_theme_tomorrow-night-eighties pre .javascript .function {
   color: #cc99cc;
 }
 
-pre code {
+.highlight_theme_tomorrow-night-eighties pre code {
   display: block;
   background: #2d2d2d;
   color: #cccccc;
   padding: 0.5em;
 }
 
-pre .coffeescript .javascript,
-pre .javascript .xml,
-pre .tex .formula,
-pre .xml .javascript,
-pre .xml .vbscript,
-pre .xml .css,
-pre .xml .cdata {
+.highlight_theme_tomorrow-night-eighties pre .coffeescript .javascript,
+.highlight_theme_tomorrow-night-eighties pre .javascript .xml,
+.highlight_theme_tomorrow-night-eighties pre .tex .formula,
+.highlight_theme_tomorrow-night-eighties pre .xml .javascript,
+.highlight_theme_tomorrow-night-eighties pre .xml .vbscript,
+.highlight_theme_tomorrow-night-eighties pre .xml .css,
+.highlight_theme_tomorrow-night-eighties pre .xml .cdata {
   opacity: 0.5;
 }
