--- a/blocks/highlight/_theme/highlight_theme_tomorrow.css
+++ b/blocks/highlight/_theme/highlight_theme_tomorrow.css
@@ -1,49 +1,49 @@
 /* http://jmblog.github.com/color-themes-for-google-code-highlightjs */
-.tomorrow-comment, pre .comment, pre .title {
+.tomorrow-comment, .highlight_theme_tomorrow pre .comment, .highlight_theme_tomorrow pre .title {
   color: #8e908c;
 }
 
-.tomorrow-red, pre .variable, pre .attribute, pre .tag, pre .regexp, pre .ruby .constant, pre .xml .tag .title, pre .xml .pi, pre .xml .doctype, pre .html .doctype, pre .css .id, pre .css .class, pre .css .pseudo {
+.tomorrow-red, .highlight_theme_tomorrow pre .variable, .highlight_theme_tomorrow pre .attribute, .highlight_theme_tomorrow pre .tag, .highlight_theme_tomorrow pre .regexp, .highlight_theme_tomorrow pre .ruby .constant, .highlight_theme_tomorrow pre .xml .tag .title, .highlight_theme_tomorrow pre .xml .pi, .highlight_theme_tomorrow pre .xml .doctype, .highlight_theme_tomorrow pre .html .doctype, .highlight_theme_tomorrow pre .css .id, .highlight_theme_tomorrow pre .css .class, .highlight_theme_tomorrow pre .css .pseudo {
   color: #c82829;
 }
 
-.tomorrow-orange, pre .number, pre .preprocessor, pre .built_in, pre .literal, pre .params, pre .constant {
+.tomorrow-orange, .highlight_theme_tomorrow pre .number, .highlight_theme_tomorrow pre ..highlight_theme_tomorrow preprocessor, .highlight_theme_tomorrow pre .built_in, .highlight_theme_tomorrow pre .literal, .highlight_theme_tomorrow pre .params, .highlight_theme_tomorrow pre .constant {
   color: #f5871f;
 }
 
-.tomorrow-yellow, pre .ruby .class .title, pre .css .rules .attribute {
+.tomorrow-yellow, .highlight_theme_tomorrow pre .ruby .class .title, .highlight_theme_tomorrow pre .css .rules .attribute {
   color: #eab700;
 }
 
-.tomorrow-green, pre .string, pre .value, pre .inheritance, pre .header, pre .ruby .symbol, pre .xml .cdata {
+.tomorrow-green, .highlight_theme_tomorrow pre .string, .highlight_theme_tomorrow pre .value, .highlight_theme_tomorrow pre .inheritance, .highlight_theme_tomorrow pre .header, .highlight_theme_tomorrow pre .ruby .symbol, .highlight_theme_tomorrow pre .xml .cdata {
   color: #718c00;
 }
 
-.tomorrow-aqua, pre .css .hexcolor {
+.tomorrow-aqua, .highlight_theme_tomorrow pre .css .hexcolor {
   color: #3e999f;
 }
 
-.tomorrow-blue, pre .function, pre .python .decorator, pre .python .title, pre .ruby .function .title, pre .ruby .title .keyword, pre .perl .sub, pre .javascript .title, pre .coffeescript .title {
+.tomorrow-blue, .highlight_theme_tomorrow pre .function, .highlight_theme_tomorrow pre .python .decorator, .highlight_theme_tomorrow pre .python .title, .highlight_theme_tomorrow pre .ruby .function .title, .highlight_theme_tomorrow pre .ruby .title .keyword, .highlight_theme_tomorrow pre .perl .sub, .highlight_theme_tomorrow pre .javascript .title, .highlight_theme_tomorrow pre .coffeescript .title {
   color: #4271ae;
 }
 
-.tomorrow-purple, pre .keyword, pre .javascript .function {
+.tomorrow-purple, .highlight_theme_tomorrow pre .keyword, .highlight_theme_tomorrow pre .javascript .function {
   color: #8959a8;
 }
 
-pre code {
+.highlight_theme_tomorrow pre code {
   display: block;
   background: white;
   color: #4d4d4c;
   padding: 0.5em;
 }
 
-pre .coffeescript .javascript,
-pre .javascript .xml,
-pre .tex .formula,
-pre .xml .javascript,
-pre .xml .vbscript,
-pre .xml .css,
-pre .xml .cdata {
+.highlight_theme_tomorrow pre .coffeescript .javascript,
+.highlight_theme_tomorrow pre .javascript .xml,
+.highlight_theme_tomorrow pre .tex .formula,
+.highlight_theme_tomorrow pre .xml .javascript,
+.highlight_theme_tomorrow pre .xml .vbscript,
+.highlight_theme_tomorrow pre .xml .css,
+.highlight_theme_tomorrow pre .xml .cdata {
   opacity: 0.5;
 }
